crates/tremula/tests/snapshots/bundle_contents__the_starting_document_of_a_bundle_with_nothing_extra_still_says_what_to_do.snap
---
source: crates/tremula/tests/bundle_contents.rs
expression: "fs::read_to_string(written.path.join(\"START_HERE.md\")).unwrap()"
---
# Start here

This is the evidence one tremula run produced: which planted bugs the project's test suite failed to notice, and what it takes to make one of them fail a test.

Read in this order:

1. `report.json` — every `verdicts` entry whose `verdict` is `survived` is a bug the suite missed.
2. `manifest.json` — the same `mutant_id` under `mutants` gives the file, the byte span, and the exact text the mutation replaces.
3. `patches/<mutant-id>.patch` — that change, ready for `git apply`. A `patch` of `null` in `bundle.json` means no file was written and `patch_error` says why; the diff itself is still in `results.json` under `entries[].diff`.
4. `logs/<mutant-id>.txt` — what the suite printed under that mutation, with this machine's paths taken out; `logs/baseline.txt` is the same for the unmutated run.

The run was made outside a version-controlled checkout, so `base.revision` is null and there is no revision to return to. Apply the patch to the project as the run measured it:

    git apply patches/<mutant-id>.patch

Run the project's own default test collection and write a test that fails while the patch is applied. Revert the patch, keep the test, and `tremula run --manifest manifest.json --project <checkout>` will report that mutant as killed. That selection collected 4 tests before your test was added, so a checkout collecting far fewer is running something else.

What this bundle cannot do is run that suite. It carries the evidence and not the project, so every step above needs a checkout of your own. Paths here are relative to this directory, and `bundle.json` holds the SHA-256 of every document and patch it names.
