crates/tremula/tests/snapshots/bundle_contents__the_starting_document_says_how_to_read_the_bundle.snap
---
source: crates/tremula/tests/bundle_contents.rs
expression: said
---
# Start here

This is the evidence one tremula run produced: which planted bugs the project's test suite failed to notice, and what it takes to make one of them fail a test.

Read in this order:

1. `report.json` — every `verdicts` entry whose `verdict` is `survived` is a bug the suite missed.
2. `manifest.json` — the same `mutant_id` under `mutants` gives the file, the byte span, and the exact text the mutation replaces.
3. `patches/<mutant-id>.patch` — that change, ready for `git apply`. A `patch` of `null` in `bundle.json` means no file was written and `patch_error` says why; the diff itself is still in `results.json` under `entries[].diff`.
4. `logs/<mutant-id>.txt` — what the suite printed under that mutation, with this machine's paths taken out; `logs/baseline.txt` is the same for the unmutated run.
5. `triage.json` — what a second look made of each survivor, and whether any input was found that separates it from the original.

Reproduce one from a checkout of the project:

    git checkout 9f1c0a3d5e7b2f4a6c8d0e2f4a6b8c0d2e4f6a80
    git apply patches/<mutant-id>.patch

Run the suite the run collected — `tests/test_ranges.py` — and write a test that fails while the patch is applied. Revert the patch, keep the test, and `tremula run --manifest manifest.json --project <checkout> --tests tests/test_ranges.py` will report that mutant as killed. The unmutated suite collected 4 tests; one that collects a different number is not the suite this bundle is about.

What this bundle cannot do is run that suite. It carries the evidence and not the project, so every step above needs a checkout of your own. Paths here are relative to this directory, and `bundle.json` holds the SHA-256 of every document and patch it names.
